--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Own styles link -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <>
+  <body>
     <header class="header">
       <div class="container header-container">
         <nav class="header-navigation">
@@ -635,31 +635,32 @@
           <p class="subscribe-text">Subscribe</p>
           <form class="subscribe-form">
             <label class="footer-form-label" for="email">
-              <input 
-              type="email" 
-              class="footer-form-input"
-              name="email" 
-              id="email"
-              placeholder="E-mail" 
+              <input
+                type="email"
+                class="footer-form-input"
+                name="email"
+                id="email"
+                placeholder="E-mail"
               />
             </label>
-          
-          <button class="subscribe-form-submit-btn" type="submit">Subscribe
-            <svg 
-            class="subscribe-form-submit-icon"
-            width="24"
-            height="24"
-            aria-label="send-icon"
-            >
-          <use href="./images/icons.svg#icon-icon-send"></use>
-        </svg>
-          </button>
+
+            <button class="subscribe-form-submit-btn" type="submit">
+              Subscribe
+              <svg
+                class="subscribe-form-submit-icon"
+                width="24"
+                height="24"
+                aria-label="send-icon"
+              >
+                <use href="./images/icons.svg#icon-icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
     </footer>
     <!-- Backdrop  -->
-    <is-open class="backdrop is-open"> 
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg
@@ -671,89 +672,103 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <p class="feedback-form-description">Leave your contacts and we will call you back</p>
-      <form class="feedback-form">
-        <div class="feedback-form-field-wrapper">
-          <label for="user-name" class="feedback-form-field-label">Name</label>
-          <div class="feedback-form-input-wrapper">
-          <input
-          type="text"
-          class="feedback-form-input"
-          name="user-name"
-          id="user-name"
-          pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+"
-          title="Nataliia"
-          required
-          />
-          <svg class="feedback-form-field-icon" width="18" height="24">
-            <use href="./images/icons.svg#icon-person-avatar"></use>
-          </svg>
-          </div>
-        </div>
-        <div class="feedback-form-field-wrapper">
-          <label for="user-phone" class="feedback-form-field-label">Phone</label>
-          <div class="feedback-form-input-wrapper">
-          <input 
-          type="tel" 
-          class="feedback-form-input"
-          name="user-phone"
-          id="user-phone"
-          pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-          title="xxx-xxx-xx-xx"
-          required
-          />
-          <svg class="feedback-form-field-icon" width="18" height="24">
-            <use href="./images/icons.svg#icon-phone"></use>
-          </svg>
-          </div>
-        </div>
-        <div class="feedback-form-field-wrapper">
-          <label for="user-email" class="feedback-form-field-label">Email</label>
-          <div class="feedback-form-input-wrapper">
-            <input 
-          type="email" 
-          class="feedback-form-input" 
-          name="user-email"
-          id="user-email"
-          required
-          />
-          <svg class="feedback-form-field-icon" width="18" height="24">
-            <use href="./images/icons.svg#icon-email"></use>
-          </svg>
-          </div>
-        </div>
-        <div class="feedback-form-textarea-wrapper">
-          <label for="user-comment" class="feedback-form-field-label">Comment</label>
-          <textarea 
-          class="feedback-form-massage"
-          name="user-comment" 
-          id="user-comment" 
-          placeholder="Text input"
-          required
-          >
-        </textarea>
-        </div>
-        <div class="feedback-form-checkbox-wrapper">
-          <input 
-          type="checkbox" 
-          class="feedback-form-privacy-checkbox visually-hidden"
-          name="privacy-policy"
-          id="privacy-policy"
-          value="true"
-          required
-          />
-          <label for="privacy-policy" class="feedback-form-checkbox-label">
-            <span class="feedback-form-own-checkbox">
-              <svg class="feedback-form-own-checkbox-icon" width="10" height="8">
-                <use href="./images/icons.svg#icon-checkmark"></use>
+        <p class="feedback-form-description">
+          Leave your contacts and we will call you back
+        </p>
+        <form class="feedback-form">
+          <div class="feedback-form-field-wrapper">
+            <label for="user-name" class="feedback-form-field-label"
+              >Name</label
+            >
+            <div class="feedback-form-input-wrapper">
+              <input
+                type="text"
+                class="feedback-form-input"
+                name="user-name"
+                id="user-name"
+                pattern="[a-zA-Zа-яА-ЯіІїЇєЄґҐ']+"
+                title="Nataliia"
+                required
+              />
+              <svg class="feedback-form-field-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-avatar"></use>
               </svg>
-            </span>
-            I accept the terms and conditions of the
-            <a class="privacy-policy-link" href="">Privacy Policy</a>
-        </label>
-        </div>
-        <button class="feedback-form-submit-btn" type="submit">Send</button>
-      </form>
+            </div>
+          </div>
+          <div class="feedback-form-field-wrapper">
+            <label for="user-phone" class="feedback-form-field-label"
+              >Phone</label
+            >
+            <div class="feedback-form-input-wrapper">
+              <input
+                type="tel"
+                class="feedback-form-input"
+                name="user-phone"
+                id="user-phone"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+                required
+              />
+              <svg class="feedback-form-field-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="feedback-form-field-wrapper">
+            <label for="user-email" class="feedback-form-field-label"
+              >Email</label
+            >
+            <div class="feedback-form-input-wrapper">
+              <input
+                type="email"
+                class="feedback-form-input"
+                name="user-email"
+                id="user-email"
+                required
+              />
+              <svg class="feedback-form-field-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="feedback-form-textarea-wrapper">
+            <label for="user-comment" class="feedback-form-field-label"
+              >Comment</label
+            >
+            <textarea
+              class="feedback-form-massage"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              required
+            >
+            </textarea>
+          </div>
+          <div class="feedback-form-checkbox-wrapper">
+            <input
+              type="checkbox"
+              class="feedback-form-privacy-checkbox visually-hidden"
+              name="privacy-policy"
+              id="privacy-policy"
+              value="true"
+              required
+            />
+            <label for="privacy-policy" class="feedback-form-checkbox-label">
+              <span class="feedback-form-own-checkbox">
+                <svg
+                  class="feedback-form-own-checkbox-icon"
+                  width="10"
+                  height="8"
+                >
+                  <use href="./images/icons.svg#icon-checkmark"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="privacy-policy-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="feedback-form-submit-btn" type="submit">Send</button>
+        </form>
       </div>
     </div>
   </body>
